[package]
name = "mess-rs"
version = "0.1.0"
authors = ["peacememories"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "2.0"
chrono = "0.4"
structopt = "0.3.2"
pancurses = "0.16.1"
ansi_term = "0.12.1"
glob = "0.3.0"
fuzzy-matcher = "0.3.4"